# pixtuoid

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  codecov.yml  justfile
.githooks/: pre-commit  (+1 more)
crates/ascii-agents/: Cargo.toml  build.rs
crates/ascii-agents-core/: Cargo.toml
crates/ascii-agents-core/src/: id.rs  layout.rs  lib.rs  pose.rs  walkable.rs
crates/ascii-agents-core/src/layout/: compute.rs  decor.rs  mask.rs  mod.rs
crates/ascii-agents-core/src/render/: mod.rs  test_renderer.rs
crates/ascii-agents-core/src/source/: antigravity.rs  claude_code.rs  decoder.rs  hook.rs  jsonl.rs  mod.rs
crates/ascii-agents-core/src/sprite/: animator.rs  blit.rs  format.rs  mod.rs
crates/ascii-agents-core/src/state/: mod.rs  reducer.rs
crates/ascii-agents-core/tests/: animator.rs  decoder.rs  e2e.rs  hook_socket.rs  jsonl_watcher.rs  reducer.rs  source_manager.rs  sprite_blit.rs  sprite_format.rs
crates/ascii-agents-hook/: Cargo.toml
crates/ascii-agents-hook/src/: main.rs
crates/ascii-agents/examples/: snapshot.rs
crates/ascii-agents/sprites/default/: dog_sit.sprite  dog_sleep.sprite  dog_walk_0.sprite  dog_walk_1.sprite  meeting_screen.sprite  pack.toml  walking_coffee_0.sprite  walking_coffee_1.sprite
crates/ascii-agents/sprites/robot/: back_couch.sprite  holding_coffee.sprite  pack.toml  seated.sprite  seated_sleeping.sprite  seated_sleeping_alt.sprite  standing.sprite  typing_0.sprite  typing_1.sprite  walking_0.sprite  walking_1.sprite  walking_back_0.sprite  walking_back_1.sprite
crates/ascii-agents/sprites/skeleton/: pack.toml  placeholder.sprite
crates/ascii-agents/src/: cli.rs  config.rs  init_pack.rs  install.rs  lib.rs  main.rs  runtime.rs  validate.rs
crates/ascii-agents/src/install/: io.rs  merge.rs
crates/ascii-agents/src/tui/: chitchat.rs  embedded_pack.rs  floor.rs  frame_cache.rs  hit_test.rs  layout.rs  mod.rs  pathfind.rs  pet.rs  pose.rs  renderer.rs  theme.rs  tui_renderer.rs  widgets.rs
crates/ascii-agents/tests/: frame_cache.rs  golden_image.rs  install.rs  layout_golden.rs  pixel_regression.rs  snapshot_regression.rs  test_helpers.rs  tui_renderer.rs  walkable_golden.rs  widget_cells.rs
crates/ascii-agents/tests/snapshots/: layout_golden__cubicle_band_96x72.snap  layout_golden__desks_192x160.snap  layout_golden__desks_96x72.snap  layout_golden__desks_dense_seed2.snap  layout_golden__desks_dense_seed6.snap  layout_golden__desks_open_plan_seed1.snap  layout_golden__desks_open_plan_seed2.snap  layout_golden__meeting_192x160.snap  layout_golden__meeting_96x72.snap  layout_golden__meeting_dense_seed2.snap  layout_golden__meeting_dense_seed6.snap  layout_golden__meeting_open_plan_seed1.snap  layout_golden__meeting_open_plan_seed2.snap  layout_golden__pantry_96x72.snap  layout_golden__room_walls_192x160.snap  layout_golden__room_walls_96x72.snap  layout_golden__room_walls_dense_seed2.snap  layout_golden__room_walls_dense_seed6.snap  layout_golden__room_walls_open_plan_seed1.snap  layout_golden__room_walls_open_plan_seed2.snap  layout_golden__walkway_96x72.snap  layout_golden__waypoints_192x160.snap  layout_golden__waypoints_96x72.snap  layout_golden__waypoints_dense_seed2.snap  layout_golden__waypoints_dense_seed6.snap  layout_golden__waypoints_open_plan_seed1.snap  layout_golden__waypoints_open_plan_seed2.snap  walkable_golden__walkable_mask_open_plan_96x70.snap  walkable_golden__walkable_mask_standard_96x70.snap
crates/pixtuoid/: CLAUDE.md  Cargo.toml
crates/pixtuoid-core/: CLAUDE.md  Cargo.toml
crates/pixtuoid-core/src/: id.rs  lib.rs  physics.rs  platform.rs  pose.rs  walkable.rs
crates/pixtuoid-core/src/layout/: approach.rs  compute.rs  decor.rs  mask.rs  mod.rs  placement.rs  reach.rs  tests.rs
crates/pixtuoid-core/src/pose/: mod.rs  tests.rs
crates/pixtuoid-core/src/source/: antigravity.rs  claude_code.rs  codex.rs  decoder.rs  jsonl.rs  manager.rs  mod.rs  reasonix.rs  registry.rs
crates/pixtuoid-core/src/sprite/: format.rs  mod.rs
crates/pixtuoid-core/src/state/: fsm.rs  mod.rs  reducer.rs  scope.rs
crates/pixtuoid-core/tests/: CLAUDE.md  claude_subagent_lifecycle.rs  codex_subagent_lifecycle.rs  decoder.rs  e2e.rs  fixture_harness.rs  hook_pipe.rs  hook_socket.rs  jsonl_watcher.rs  reducer.rs  socket_path_parity.rs  source_manager.rs  sprite_format.rs  supported_sources_manifest.rs  watcher.rs
crates/pixtuoid-core/tests/render/: animator.rs  blit.rs  format.rs  main.rs
crates/pixtuoid-core/tests/snapshots/: fixture_harness__antigravity__tool-run.snap  fixture_harness__claude-code__tool-call.snap  fixture_harness__codex__permission-flow.snap  fixture_harness__codex__tool-run.snap  fixture_harness__reasonix__tool-run.snap
crates/pixtuoid-core/tests/sources/: claude.rs  conformance.rs  main.rs  manager.rs
crates/pixtuoid-core/tests/transport/: main.rs  pipe.rs  socket.rs
crates/pixtuoid-hook/: Cargo.toml
crates/pixtuoid-hook/src/: main.rs  paths.rs  transport.rs
crates/pixtuoid-hook/tests/: shim.rs  shim_pipe.rs
crates/pixtuoid/examples/: snapshot.rs
crates/pixtuoid/sprites/default/: holding_coffee.sprite  meeting_sofa.sprite  pack.toml
crates/pixtuoid/src/: cli.rs  config.rs  init_pack.rs  lib.rs  main.rs  runtime.rs  validate.rs  version.rs
crates/pixtuoid/src/install/: claude.rs  codex.rs  io.rs  merge.rs  mod.rs  reasonix.rs  target.rs
crates/pixtuoid/src/runtime/: driver.rs  mod.rs
crates/pixtuoid/src/tui/: CLAUDE.md  anim.rs  chitchat.rs  embedded_pack.rs  floor.rs  frame_cache.rs  hit_test.rs  layout.rs  mod.rs  motion.rs  pathfind.rs  pose.rs  renderer.rs  tui_renderer.rs
crates/pixtuoid/tests/: golden_image.rs  install.rs  pack_cli.rs  pixel_regression.rs  snapshot_regression.rs  test_helpers.rs  tui_renderer.rs  widget_cells.rs
crates/pixtuoid/tests/common/: mod.rs
crates/pixtuoid/tests/snapshots/: layout_golden__waypoints_192x160.snap  layout_golden__waypoints_96x72.snap  layout_golden__waypoints_dense_seed6.snap  layout_golden__waypoints_open_plan_seed2.snap  walkable_golden__walkable_mask_open_plan_96x70.snap  (+1 more)
(+201 files in other folders)
