[workspace]
resolver = "2"
members  = [
    "crates/ascii-agents-core",
    "crates/ascii-agents",
    "crates/ascii-agents-hook",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"
license      = "MIT"
repository   = "https://github.com/IvanWng97/ascii-agents"

[workspace.dependencies]
tokio              = { version = "1", default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
anyhow             = "1"
thiserror          = "1"
async-trait        = "0.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify             = "6"
ratatui            = "0.28"
crossterm          = "0.28"
clap               = { version = "4", features = ["derive"] }
fs2                = "0.4"
