[workspace]
resolver = "2"
members  = [
    "crates/pixtuoid-core",
    "crates/pixtuoid",
    "crates/pixtuoid-hook",
]

[workspace.package]
version      = "0.5.0"
edition      = "2021"
rust-version = "1.78"
license      = "MIT"
repository   = "https://github.com/IvanWng97/pixtuoid"
authors      = ["Ivan Wang <ivanwng97@icloud.com>"]
description  = "Terminal pixel-art office for AI coding agents"
homepage     = "https://github.com/IvanWng97/pixtuoid"
keywords     = ["terminal", "tui", "pixel-art", "ai-agents", "claude"]
categories   = ["command-line-utilities", "visualization"]

[profile.release]
lto           = true
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[workspace.dependencies]
tokio              = { version = "1", default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "1"
anyhow             = "1"
async-trait        = "0.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify             = "8"
ratatui            = "0.30"
crossterm          = "0.29"
clap               = { version = "4", features = ["derive"] }
fs2                = "0.4"
