[package]
name                   = "ascii-agents-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[features]
default       = []
test-renderer = []

[dependencies]
tokio       = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
notify      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util", "rt-multi-thread"] }
tempfile = "3"
filetime = "0.2"

