[package]
name                   = "ascii-agents-core"
description            = "Headless engine for ascii-agents — state, sprites, layout"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[features]
default       = []
test-renderer = []

[dependencies]
tokio       = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
notify      = { workspace = true }
libc        = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util", "rt-multi-thread"] }
tempfile = "3"
filetime = "0.2"

