[package]
name                   = "ascii-agents-hook"
description            = "Lightweight hook shim for ascii-agents"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[[bin]]
name = "ascii-agents-hook"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
anyhow     = { workspace = true }
libc       = "0.2"

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/ascii-agents-hook", "usr/bin/", "755"],
]
