[package]
name                   = "ascii-agents"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "ascii-agents"
path = "src/main.rs"

[dependencies]
ascii-agents-core  = { path = "../ascii-agents-core", features = ["test-renderer"] }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "fs", "io-util"] }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
fs2                = { workspace = true }
which              = "6"

[dev-dependencies]
tempfile = "3"
