[package]
name                   = "pixtuoid-core"
description            = "Headless engine for pixtuoid — state, sprites, layout"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
# The parity test #[path]-includes ../../pixtuoid-hook/src/paths.rs, which
# can't exist inside the published tarball — shipping the test would make
# `cargo test` fail on the .crate (publish itself is unaffected: its verify
# step builds, not tests). Workspace-only test, workspace-only file.
exclude                = ["tests/socket_path_parity.rs"]

[features]
default       = []
test-renderer = []

[dependencies]
tokio       = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
notify      = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "fs", "net", "time", "io-util", "rt-multi-thread"] }
tempfile = "3"
filetime = "0.2"
insta = { version = "1", features = ["yaml"] }

