[package]
name                   = "pixtuoid-hook"
description            = "Lightweight hook shim for pixtuoid"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[[bin]]
name = "pixtuoid-hook"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
anyhow     = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/pixtuoid-hook", "usr/bin/", "755"],
]
